--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "blog-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^2.2.3",
-    "next": "14.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-quill": "^2.0.0",
-    "react-redux": "^9.1.1",
-    "scss": "^0.2.4"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.1",
-    "typescript": "^5"
-  }
+    "name": "blog-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "export": "next export",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@reduxjs/toolkit": "^2.2.3",
+        "next": "14.2.1",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-quill": "^2.0.0",
+        "react-redux": "^9.1.1",
+        "scss": "^0.2.4"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.1",
+        "typescript": "^5"
+    }
 }
